objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Central Comms</fullName>
        <description>Managing comms that go via Central Communications</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting response from case originator</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New email received %28case closed%29</fullName>
        </values>
        <values>
            <fullName>New email received from case originator</fullName>
        </values>
        <values>
            <fullName>New message</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Passed to TCS</fullName>
        </values>
        <values>
            <fullName>Passed to another department</fullName>
        </values>
        <values>
            <fullName>Passed to finance</fullName>
        </values>
        <values>
            <fullName>Passed to marketing</fullName>
        </values>
        <values>
            <fullName>Passed to other</fullName>
        </values>
        <values>
            <fullName>Passed to programmes</fullName>
        </values>
        <values>
            <fullName>Passed to staffing</fullName>
        </values>
        <values>
            <fullName>Reopened by them</fullName>
        </values>
        <values>
            <fullName>We have responded to them %28closed%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GoogleApps support</fullName>
        <description>For managing GoogleApps support cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Auto-closed due to lack of response</fullName>
        </values>
        <values>
            <fullName>Awaiting response from case originator</fullName>
        </values>
        <values>
            <fullName>Awaiting response from third party</fullName>
        </values>
        <values>
            <fullName>Closed - Related to Open Case</fullName>
        </values>
        <values>
            <fullName>Closed - duplicate case</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New email received %28case closed%29</fullName>
        </values>
        <values>
            <fullName>New email received from case originator</fullName>
        </values>
        <values>
            <fullName>New message</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On hold %28non-urgent%29</fullName>
        </values>
        <values>
            <fullName>We have responded to them %28closed%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal support</fullName>
        <description>For managing internal support cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Auto-closed due to lack of response</fullName>
        </values>
        <values>
            <fullName>Awaiting response from case originator</fullName>
        </values>
        <values>
            <fullName>Awaiting response from third party</fullName>
        </values>
        <values>
            <fullName>Change request - completed</fullName>
        </values>
        <values>
            <fullName>Closed - Related to Open Case</fullName>
        </values>
        <values>
            <fullName>Closed - change request</fullName>
        </values>
        <values>
            <fullName>Closed - duplicate case</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New email received %28case closed%29</fullName>
        </values>
        <values>
            <fullName>New email received from case originator</fullName>
        </values>
        <values>
            <fullName>New message</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New message - and assigned owner</fullName>
        </values>
        <values>
            <fullName>On hold %28non-urgent%29</fullName>
        </values>
        <values>
            <fullName>We have responded to them %28closed%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Staffing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Auto-closed due to lack of response</fullName>
        </values>
        <values>
            <fullName>Awaiting response from case originator</fullName>
        </values>
        <values>
            <fullName>Awaiting response from third party</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New email received from case originator</fullName>
        </values>
        <values>
            <fullName>New message</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New message - and assigned owner</fullName>
        </values>
        <values>
            <fullName>Reopened by them</fullName>
        </values>
        <values>
            <fullName>We have responded to them %28closed%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>YP</fullName>
        <description>Young people messages support process</description>
        <isActive>true</isActive>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New message</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New message - and assigned owner</fullName>
        </values>
        <values>
            <fullName>Reopened by them</fullName>
        </values>
        <values>
            <fullName>We have responded to them %28closed%29</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Comment Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Email__c</fullName>
        <label>Case Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_mobile_number__c</fullName>
        <formula>Contact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact mobile number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criticism__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box checked if a criticism (not a proper complaint) is made</description>
        <inlineHelpText>Check box if a criticism (not a proper complaint) is made. Example of criticism is saying that we did not call them back quickly</inlineHelpText>
        <label>Criticism?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_auto_close_email_sent__c</fullName>
        <label>Date auto-close email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_notification_of_existing_case_sent__c</fullName>
        <inlineHelpText>Date that the case was linked to an existing case. An email will have been sent to the case originator</inlineHelpText>
        <label>Date notification of existing case sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_status_change_email_sent__c</fullName>
        <label>Date status change email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time_of_first_response__c</fullName>
        <inlineHelpText>Shows when the first response was sent</inlineHelpText>
        <label>Date/time of first response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_taken_to_close_case__c</fullName>
        <formula>ClosedDate - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days taken to close case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Inclusion</fullName>
                </value>
                <value>
                    <fullName>Central Marketing</fullName>
                </value>
                <value>
                    <fullName>Curriculum</fullName>
                </value>
                <value>
                    <fullName>Customer Services</fullName>
                </value>
                <value>
                    <fullName>Evolution</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>HeadStart</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Programmes - delivery</fullName>
                </value>
                <value>
                    <fullName>Programmes - set up</fullName>
                </value>
                <value>
                    <fullName>Programmes - TCS</fullName>
                </value>
                <value>
                    <fullName>Public Affairs</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Staffing</fullName>
                </value>
                <value>
                    <fullName>StepForward</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_required__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Notes the number of hours needed to resolve this case.
Default is 5 minutes</inlineHelpText>
        <label>Hours required</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_in_systems_review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box, if the case and/or the resolution should be included in the review of the system</inlineHelpText>
        <label>Include in systems review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_parent_case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the parent case should appear in the Key Parent Case view</inlineHelpText>
        <label>Key parent case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_comment_outgoing_email_sent__c</fullName>
        <label>Last comment/outgoing email sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Official_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box checked if it is a complaint</description>
        <inlineHelpText>Check box if it is a complaint</inlineHelpText>
        <label>Official Complaint?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_out_of_escalations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you do not want this case to be flagged up through the escalation rules. This should only be used when the case is receiving a lot of attention and does not need to be flagged.</inlineHelpText>
        <label>Opt out of escalations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_time__c</fullName>
        <formula>Date_time_of_first_response__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_response_time_check__c</fullName>
        <inlineHelpText>Updates from Time with Support when case is first modified - this captures the first response time, regardless of the length of time needed to resolve the case.</inlineHelpText>
        <label>SLA response time check</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_status_change_notification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box to notify case originator of amendments to the case status</inlineHelpText>
        <label>Send status change notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Triage__c</fullName>
        <inlineHelpText>For innovation team to indicate what priority a case has.</inlineHelpText>
        <label>Triage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Alex_cases_checker</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Ruth</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Ruth</value>
        </filters>
        <label>Alex cases checker</label>
    </listViews>
    <listViews>
        <fullName>All_Booking_System_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>TCN Booking System Website</value>
        </filters>
        <label>All Booking System cases</label>
        <sharedTo>
            <group>Central_Comms</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ants_View_2</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Systems_support</value>
        </filters>
        <label>**Ants View 2</label>
        <sharedTo>
            <group>Systems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Auto_Internal</fullName>
        <filterScope>Queue</filterScope>
        <label>Auto Internal</label>
        <queue>Auto_Internal</queue>
    </listViews>
    <listViews>
        <fullName>Cases_date_search</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/13/2015 12:01 AM</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>8/13/2015 11:59 PM</value>
        </filters>
        <label>Cases date search</label>
    </listViews>
    <listViews>
        <fullName>Central_Comms_Tier_1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.EMAIL</field>
            <operation>notEqual</operation>
            <value>yes@ncsyes.co.uk</value>
        </filters>
        <label>***Contact Centre Tier 1</label>
        <queue>Central_Comms_Tier_1</queue>
        <sharedTo>
            <group>Central_Comms</group>
            <roleAndSubordinatesInternal>Telesales_Agent</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Comms_Tier_3</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>***Contact Centre Tier 4</label>
        <queue>Central_Comms_Tier_3</queue>
        <sharedTo>
            <group>Central_Comms</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Change_requests_Staffing</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
            <value>Request for change to system</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed - change request</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Staffing</value>
        </filters>
        <label>Change requests - Staffing</label>
        <sharedTo>
            <group>Systems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_cases</fullName>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.REASON</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Jacob Williams</value>
        </filters>
        <filters>
            <field>CASES.CLOSED_DATE</field>
            <operation>notEqual</operation>
        </filters>
        <label>Closed cases!</label>
        <queue>Central_Comms_Tier_1</queue>
        <sharedTo>
            <group>Systems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_cases1</fullName>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.REASON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.TheChallenge</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>We have responded to them (closed),New email received (case closed)</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Zainab</value>
        </filters>
        <label>Closed cases!</label>
        <sharedTo>
            <group>Systems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contact_Centre_Complaint</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Tang</value>
        </filters>
        <label>**Contact Centre -  left over cases</label>
    </listViews>
    <listViews>
        <fullName>Contact_Centre_Date_Changes</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>date change</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New message</value>
        </filters>
        <label>**Contact Centre - Date Changes</label>
        <queue>Central_Comms_Tier_2</queue>
    </listViews>
    <listViews>
        <fullName>Contact_Centre_Friend_Reuqests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>friend,share,accommodation,group</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>bursary,emergency</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New message</value>
        </filters>
        <label>**Contact Centre - Friend Reuqests</label>
        <queue>Central_Comms_Tier_2</queue>
    </listViews>
    <listViews>
        <fullName>Contact_Centre_Programme_pack</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>absence</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New message</value>
        </filters>
        <label>**Contact Centre - Absence Requests</label>
        <queue>Central_Comms_Tier_2</queue>
    </listViews>
    <listViews>
        <fullName>Contact_Centre_Programme_pack2</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>pack,packing list,programme pack,timetable,information</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New message</value>
        </filters>
        <label>**Contact Centre - Programme pack</label>
        <queue>Central_Comms_Tier_2</queue>
    </listViews>
    <recordTypes>
        <fullName>GoogleApps_support</fullName>
        <active>true</active>
        <businessProcess>GoogleApps support</businessProcess>
        <description>For managing GoogleApps support</description>
        <label>GoogleApps support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staffing</fullName>
        <active>true</active>
        <businessProcess>Staffing</businessProcess>
        <label>Staffing SouthLon/Surrey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staffing_NW</fullName>
        <active>true</active>
        <businessProcess>Staffing</businessProcess>
        <label>Staffing NW</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staffing_North_London</fullName>
        <active>true</active>
        <businessProcess>Staffing</businessProcess>
        <label>Staffing North London</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staffing_West_London</fullName>
        <active>true</active>
        <businessProcess>Staffing</businessProcess>
        <label>Staffing West London</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staffing_West_Midlands</fullName>
        <active>true</active>
        <businessProcess>Staffing</businessProcess>
        <label>Staffing West Midlands</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staffing_general</fullName>
        <active>true</active>
        <businessProcess>Staffing</businessProcess>
        <label>Staffing - general</label>
    </recordTypes>
    <recordTypes>
        <fullName>Systems_support</fullName>
        <active>true</active>
        <businessProcess>Internal support</businessProcess>
        <description>Internal support cases</description>
        <label>Systems support</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS</fullName>
        <active>true</active>
        <businessProcess>YP</businessProcess>
        <label>TCS</label>
    </recordTypes>
    <recordTypes>
        <fullName>TheChallenge</fullName>
        <active>true</active>
        <businessProcess>Central Comms</businessProcess>
        <description>The Challenge</description>
        <label>TheChallenge</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Force_case_owner_change</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OwnerId = &quot;00GC0000002BjIQ&quot;, NOT(ISPICKVAL(  Status , &quot;New message&quot;)))</errorConditionFormula>
        <errorMessage>Please change the Case Owner over to yourself or the relevant person.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hours_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(TEXT( Reason ))),  OR(ISPICKVAL(Department__c , &quot;Programmes - Summer prog&quot;), ISPICKVAL( Department__c , &quot;Staffing&quot;)),  Hours_required__c = 0.0)</errorConditionFormula>
        <errorDisplayField>Hours_required__c</errorDisplayField>
        <errorMessage>Please enter an estimate of how long it took you to investigate and resolve the case</errorMessage>
    </validationRules>
</CustomObject>